--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
-    margin: 0px;
-}
-main {
-    height: 100vh;
+    height: 100%;
+    margin: 0;
+    background-color: #111;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 html {
-    overflow-y: hidden;
+    height: 100%;
 }
